@@ -1,18 +1,13 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.8 2009-10-16 21:50:21 chu11 Exp $
+## $Id: Makefile.am,v 1.9 2009-10-16 23:49:25 chu11 Exp $
 ##*****************************************************************************
 
 noinst_HEADERS	       = wrappers.h
-
-if !WITH_STATIC_MODULES
-LTDL_WRAPPERS_LIB = libwrappers_ltdl.la
-endif
 
 noinst_LTLIBRARIES     = libwrappers.la \
 			 libwrappers_hash.la \
 			 libwrappers_hostlist.la \
 			 libwrappers_list.la \
-			 $(LTDL_WRAPPERS_LIB) \
 			 libwrappers_marshall.la \
 			 libwrappers_pthread.la
 
@@ -31,10 +26,6 @@ libwrappers_hostlist_la_SOURCES = wrappers_hostlist.c
 libwrappers_list_la_CFLAGS  = -I$(srcdir)/../common \
 			      -I$(srcdir)/../include
 libwrappers_list_la_SOURCES = wrappers_list.c
-
-libwrappers_ltdl_la_CFLAGS  = -I$(srcdir)/../common \
-			      -I$(srcdir)/../include
-libwrappers_ltdl_la_SOURCES = wrappers_ltdl.c
 
 libwrappers_marshall_la_CFLAGS  = -I$(srcdir)/../common \
 			          -I$(srcdir)/../include
