@@ -1,5 +1,10 @@
 2009-10-16  Albert Chu  <chu11@llnl.gov>
 
+	* src/libs/wrappers/wrappers_ltdl.c, src/libs/wrappers/wrappers.h:
+	Remove ltdl wrapper functions which are unused.
+	
+2009-10-16  Albert Chu  <chu11@llnl.gov>
+
 	* Fix RHEL6/FC11 build issues.
 	
 2009-08-11  Albert Chu  <chu11@llnl.gov>
